适配任务追踪与指南到 Forge 1.20